[feat] app.component.html: buttons to switch between routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
+<a routerLink="/albums"><button>Research</button></a>
+<a routerLink="/library"><button>Library</button></a>
+
 <router-outlet></router-outlet>
